k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elp-service
  namespace: elearning
spec:
  selector:
    app: elp
  ports:
    - protocol: TCP
      port: 8086       # service port
      targetPort: 8086 # pod container port
  type: ClusterIP
